changes for ark
